--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,12 @@
     // Для получения дополнительной информации посетите: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    {
-     "name": "Attach to Edge",
-     "port": 5500,
-     "request": "attach",
-     "type": "pwa-msedge",
-     "webRoot": "${workspaceFolder}"
-    }
+        {
+            "type": "pwa-chrome",
+            "request": "launch",
+            "name": "Launch Chrome against localhost",
+            "url": "http://127.0.0.1:5500",
+            "webRoot": "${workspaceFolder}/script"
+        }
     ]
 }
