--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Учебный сайт для закрепления верстки и обучению основ js",
   "main": "index.js",
   "scripts": {
-    "build": "rd /s /q dist && webpack --mode production",
+    "build": "webpack --mode production",
     "dev": "webpack serve"
   },
   "repository": {
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.18.3",
     "css-loader": "^6.4.0",
     "cssnano": "^5.0.8",
     "html-webpack-plugin": "^5.3.2",
@@ -33,7 +34,5 @@
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
   },
-  "dependencies": {
-    "core-js": "^3.18.3"
-  }
+  "dependencies": {}
 }
