--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^3.19.0",
     "css-loader": "^6.5.0",
     "cssnano": "^5.0.8",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.3",
     "postcss-loader": "^6.2.0",
